fixes text alignment on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,7 +13,6 @@
 
   @media (max-width: 768px) {
     flex-direction: column;
-    text-align: center;
   }
 }
 
